k8s/istio/greeter-destination-rule-cb.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: greeter-service
spec:
  host: greeter-service
  subsets:
    - name: production
      labels: 
        version: production
      trafficPolicy:
        connectionPool:
          tcp:
            maxConnections: 1
        outlierDetection:
          consecutiveErrors: 7
          interval: 5s
          baseEjectionTime: 15m
