k8s/istio/greeter-destination-rule-init.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: greeter-service
spec:
  host: greeter-service
  subsets:
    - name: production
      labels: 
        version: production
    - name: canary
      labels:
        version: canary
