k8s/istio/greeter-virtual-service-init.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: greeter-service
spec:
  hosts:
  - greeter-service
  http:
    - route:
      - destination:
          host: greeter-service
          port:
            number: 8080
          subset: production
        weight: 100
